# flight-sim

./: .gitignore  README.md
BackupNeoFlyFiles/: backupNeoflyFiles.ps1
NewSky-Fix-A2A-Aerostar/: NewSkyFix-A2A-Aerostar - Copy.ps1.txt  NewSkyFix-A2A-Aerostar PowerShell Script Readme.md  NewSkyFix-A2A-Aerostar.ps1  NewSkyFix-A2A-AerostarLog.txt  NewSkyFix-Config.json
Simfocus-Helipad-Manager/: Simfocus Autogen Helipads Manager Specifications.docx  Simfocus Autogen helipad management requirements.txt  Simfocus Helipad Manager User Manual.docx  Simfocus-Helipad-Manager-config.json  Simfocus-Helipad-Manager-log.txt  Simfocus-Helipad-Manager-managed-list.txt  SimfocusAutogenHelipadsManager.ps1  SimfocusAutogenHelipadsManager.ps1.txt
Simfocus_Helipad_Manager_Map/: App.xaml  App.xaml.cs  CMakeLists.txt  HelipadInfoPanel.xaml  HelipadInfoPanel.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Simfocus_Helipad_Manager_Map.csproj  Simfocus_Helipad_Manager_Map.sln  main.cpp
Simfocus_Helipad_Manager_Map/Models/: Helipad.cs
Simfocus_Helipad_Manager_Map/Services/: AppSettings.cs  BglIndex.cs  CsvLoader.cs  FileToggler.cs
syncNeoFlyNavdataWithSky4sim/: syncNeoFlyNavdataWithSky4sim.ps1  syncNeoFlyNavdataWithSky4sim.xml
